tested b.cpp and c.cpp

--- a/6824_hw1/src/Makefile
+++ b/6824_hw1/src/Makefile
@@ -5,8 +5,15 @@ LDFLAGS=-pthread
 
 all: b c
 
-b: b.cpp
+b: b.cpp gen
 	$(CC) $(CFLAGS) $(LDFLAGS)  $< -o b 
+
+gen: gen.cpp gen.sh
+	$(CC) $(CFLAGS) $(LDFLAGS) gen.cpp -o gen
+	sh gen.sh
 
 c: c.cpp
 	$(MPICC) $(CFLAGS) $(LDFLAGS) $< -o c 
+
+test: test.sh
+	./test.sh 2>&1 | tee eval.txt
